--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "samba-client": "^7.2.0",
-    "smb2": "^0.2.11"
+    "smb2": "^0.2.11",
+    "sqlite3": "^5.1.7"
   }
 }
