--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.13",
+    "@tailwindcss/cli": "^4.0.14",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "path": "^0.12.7",
     "samba-client": "^7.2.0",
     "smb2": "^0.2.11",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tailwindcss": "^4.0.14"
   }
 }
